added sample of select change event

--- a/cmd/backup/static/backup.html
+++ b/cmd/backup/static/backup.html
@@ -591,6 +591,15 @@
             },
         };
 
+        // $( "select" )
+        //     .change(function () {
+        //         var str = "";
+        //         $( "select option:selected" ).each(function() {
+        //             str += $( this ).text() + " ";
+        //         });
+        //         $( "div" ).text( str );
+        //     })
+        //     .change();
         // $("#select-srcDirs").selectpicker();
 
     </script>
