--- a/cmd/backup/static/base.html
+++ b/cmd/backup/static/base.html
@@ -54,7 +54,7 @@
                                 {{.Phrase1}}
                             </span>
                         </a>
-                        <span class="d-inline-block text-truncate text-truncate-sm">{{.Phrase2}}</span>
+                        <span class="d-inline-block">{{.Phrase2}}</span>
                     </div>
                     <img src="https://www.gotbootstrap.com/themes/smartadmin/4.0.2/img/card-backgrounds/cover-2-lg.png" class="cover" alt="cover">
                 </div>
@@ -199,17 +199,11 @@
     <a href="#" class="menu-item btn" data-toggle="tooltip" data-placement="left" title="Scroll Top">
         <i class="fal fa-arrow-up"></i>
     </a>
-    <a href="page_login_alt.html" class="menu-item btn" data-toggle="tooltip" data-placement="left" title="Logout">
-        <i class="fal fa-sign-out"></i>
-    </a>
     <a href="#" class="menu-item btn" data-action="app-fullscreen" data-toggle="tooltip" data-placement="left" title="Full Screen">
         <i class="fal fa-expand"></i>
     </a>
     <a href="#" class="menu-item btn" data-action="app-print" data-toggle="tooltip" data-placement="left" title="Print page">
         <i class="fal fa-print"></i>
-    </a>
-    <a href="#" class="menu-item btn" data-action="app-voice" data-toggle="tooltip" data-placement="left" title="Voice command">
-        <i class="fal fa-microphone"></i>
     </a>
 </nav>
 <!-- END Quick Menu -->
